# claude-pilot-py

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  hay.txt  pf.txt  pyproject.toml
.claude/: claude-pilot.json
.claude/commands/: mika.md
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: permission-mode.md
docs/plans/: 2026-04-14-001-feat-initial-python-port-plan.md  2026-04-14-002-fix-tier1-cd-and-compound-plan.md  2026-05-16-001-fix-thinking-only-turn-logging-plan.md  2026-05-17-001-feat-tier1-expansion-mika1191-companion.md  2026-05-28-001-feat-cpp-7-log-reconnect-on-sdk-reinit-plan.md  2026-06-03-001-fix-policy-devpilot-bash-footprint-plan.md  2026-06-05-001-fix-mika1409-denied-bash-patterns-hint-plan.md  2026-06-08-001-fix-27-tier1-drop-awk-sed-plan.md  2026-06-30-001-fix-35-permissions-git-show-redirect-plan.md  2026-06-30-001-fix-substitution-allowlist-plan.md  2026-06-30-002-fix-33-tier1-find-exec-readonly-allowlist-plan.md  2026-06-30-002-fix-45-make-verify-allowlist-plan.md  2026-06-30-003-fix-37-k-style-funsub-marker-plan.md  2026-06-30-003-fix-43-hex-ref-rationale-strike-plan.md  2026-06-30-004-fix-47-heredoc-quoted-delimiter-plan.md  2026-06-30-004-fix-tier1-composite-xargs-dquote-ugrep-plan.md  2026-06-30-005-fix-agent-composite-55-54-56-sdk-stage2-plan.md  2026-06-30-052-deps-claude-agent-sdk-0-2-110-stage1-plan.md  2026-06-30-053-fix-59-schedulewakeup-headless-noop-plan.md  2026-06-30-053-fix-dest-validator-containment-control-plane-plan.md  2026-06-30-054-fix-60-tier1-command-builtin-guard-plan.md  2026-06-30-055-fix-64-tier1-sort-write-guard-plan.md
docs/solutions/security-issues/: command-string-policy-allow-rules-are-compound-unsafe.md
docs/solutions/tooling-decisions/: claude-agent-sdk-major-version-bump-is-mechanical-not-a-rewrite.md  harness-runtime-tools-bypass-can-use-tool.md  sdk-system-prompt-must-be-preset-append-not-plain-string.md
scripts/: verify-pipeline.sh
src/claude_pilot/: __init__.py  agent.py  audit.py  cli.py  guardrails.py  inbox_writer.py  logger.py  notify.py  per_spawn.py  permissions.py  policy.py  tier1.py  transport.py  types.py  ui.py
src/claude_pilot/ipython/: __init__.py  magics.py  session.py
src/claude_pilot/policies/: permissions.yaml
tests/: test_agent.py  test_cli.py  test_guardrails.py  test_inbox_writer.py  test_ipython_magics.py  test_per_spawn.py  test_permissions.py  test_policy_devpilot.py  test_result_cost.py  test_rules.py  test_tier1.py  test_types.py
tests/replay/: replay_relay_decisions.py
