[project]
name = "claude-pilot"
version = "0.1.0"
description = "Python wrapper around claude-agent-sdk with relay-based tool permission callbacks"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Senara Solutions" }]
dependencies = [
  "claude-agent-sdk==0.1.59",
  "pydantic>=2.6,<3",
  "python-dotenv>=1.0",
]

[project.scripts]
claude-pilot = "claude_pilot.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_pilot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = [
  "E501",  # line length handled by formatter; we don't enforce a hard cap
  "SIM103", # "return the condition directly" — explicit branches read cleaner in tier1 rules
  "SIM105", # `try/except/pass` — explicit form is fine for best-effort cleanup
  "SIM108", # ternary replacement not always clearer
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
