[project]
name = "claude-pilot"
version = "0.1.0"
description = "Python wrapper around claude-agent-sdk with relay-based tool permission callbacks"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Senara Solutions" }]
dependencies = [
  "claude-agent-sdk==0.2.110",
  "pydantic>=2.6,<3",
  "pyyaml>=6.0.3,<7",
  "python-dotenv>=1.0",
  # Transitive security pins for cpp#66 (2026-07-04 Dependabot cleanup — public-flip alert cleanup).
  # These packages are pulled in by claude-agent-sdk / cryptography stack but cpp does not
  # directly import them; pinning here forces uv lock to select patched versions across the
  # tree. See cpp#66 body for full CVE inventory + rationale.
  "python-multipart>=0.0.30",   # CVEs 42561/53537/53538/53539/53540 — DoS + parameter smuggling
  "pyjwt>=2.13.0",              # CVEs 48522/48523/48524/48525/48526 — SSRF + algorithm bypass + HS256 forgery
  "starlette>=1.3.1",           # CVEs 48710/48817/48818/54282/54283 — host header poisoning + DoS
  "cryptography>=48.0.1",       # vulnerable OpenSSL included in cryptography wheels
  "idna>=3.15",                 # CVE-2026-45409 — IDNA encoding bypass of CVE-2024-3651 fix
  "pydantic-settings>=2.14.2",  # secrets_dir symlink escape
]

[project.scripts]
claude-pilot = "claude_pilot.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-PyYAML>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_pilot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = [
  "E501",
  "SIM103",
  "SIM105",
  "SIM108",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
